--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <li class="d-lg-none">
                             <span class="nav-link text-body d-flex align-items-center cursor-pointer" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                                aria-label="Toggle navigation"><i class="ri-menu-line ri-lg me-1"></i> Menu</span>
+                                aria-label="Toggle navigation"><i class="ri-menu-line me-1"></i> Menu</span>
                         </li>
                         <li class="ms-1 d-none d-lg-inline-block">
                             <a class="nav-link text-body" href="./dist/login.html">
@@ -493,12 +493,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-xl-6" data-aos="fade-left">
+                    <div class="col-12 col-xl-6 four-photo-div" data-aos="fade-left">
                         <div class="row g-4 justify-content-end">
-                            <div class="col-12 col-md-6 d-flex">
+                            <div class="col-12 col-md-6 four-photo d-flex">
                                 <div class="card position-relative overflow-hidden">
                                     <picture class="position-relative z-index-10 d-block bg-light">
-                                        <img class="w-100 rounded four-photo " src="./dist/assets/images/banners/banner-8.jpg" alt="develoeped by Mohamed_Al Shayeb">
+                                        <img class="w-100 rounded " src="./dist/assets/images/banners/banner-8.png" alt="develoeped by Mohamed_Al Shayeb">
                                     </picture>
                                     <div class="card-overlay">
                                         <p class="lead fw-bolder mb-2 castumePar"> افق اخضر</p>
@@ -506,10 +506,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 d-flex">
+                            <div class="col-12 col-md-6 four-photo d-flex">
                                 <div class="card position-relative overflow-hidden">
                                     <picture class="position-relative z-index-10 d-block bg-light">
-                                        <img class="w-100 rounded four-photo " src="./dist/assets/images/banners/banner-9.jpg" alt="develoeped by Mohamed_Al Shayeb">
+                                        <img class="w-100 rounded " src="./dist/assets/images/banners/banner-9.jpg" alt="develoeped by Mohamed_Al Shayeb">
                                     </picture>
                                     <div class="card-overlay">
                                         <p class="lead fw-bolder mb-2 castumePar">افق اخضر</p>
@@ -517,10 +517,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 d-flex">
+                            <div class="col-12 col-md-6 four-photo d-flex">
                                 <div class="card position-relative overflow-hidden">
                                     <picture class="position-relative z-index-10 d-block bg-light">
-                                        <img class="w-100 rounded four-photo " src="./dist/assets/images/banners/banner-10.jpg" alt="develoeped by Mohamed_Al Shayeb">
+                                        <img class="w-100 rounded " src="./dist/assets/images/banners/banner-10.jpg" alt="develoeped by Mohamed_Al Shayeb">
                                     </picture>
                                     <div class="card-overlay">
                                         <p class="lead fw-bolder mb-2 castumePar">افق اخضر</p>
@@ -528,10 +528,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 d-flex">
+                            <div class="col-12 col-md-6 four-photo d-flex">
                                 <div class="card position-relative overflow-hidden">
                                     <picture class="position-relative z-index-10 d-block bg-light">
-                                        <img class="w-100 rounded four-photo " src="./dist/assets/images/banners/banner-11.jpg" alt="develoeped by Mohamed_Al Shayeb">
+                                        <img class="w-100 rounded " src="./dist/assets/images/banners/banner-11.jpg" alt="develoeped by Mohamed_Al Shayeb">
                                     </picture>
                                     <div class="card-overlay">
                                         <p class="lead fw-bolder mb-2 castumePar">افق اخضر</p>
