--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </div>
 
 
-    <div class="HomeContaner">
-      <nav class="navbar navbar-expand-lg  flex-column border-0 " id="costemNav">
+  
+      <nav class="navbar navbar-expand-lg HomeContaner flex-column border-0 " id="costemNav">
         <div class="container-fluid">
             <div class="w-100">
                 <div class="d-flex justify-content-between align-items-center flex-wrap">
@@ -155,7 +155,7 @@
             </div>
         </div>
     </nav>
-    <section class="mt-0 overflow-hidden ">
+    <section class="mt-0 HomeContaner overflow-hidden ">
         <!-- Page Content Goes Here -->
 
         <!-- / Top banner -->
@@ -277,63 +277,63 @@
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-1.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-1.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-2.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-2.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-3.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-3.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-4.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-4.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-5.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-5.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-6.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-6.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-7.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-7.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-8.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-8.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
                             <div class="mx-3 mx-lg-5 f-w-24">
                                 <a class="d-block" href="./dist/category.html">
                                     <picture>
-                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-9.png" alt="">
+                                        <img class="img-fluid d-table mx-auto" src="./dist/assets/images/logos/logo-9.png" alt="Green">
                                     </picture>
                                 </a>
                             </div>
@@ -611,7 +611,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-1.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -621,7 +621,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-2.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -631,7 +631,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-3.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -641,7 +641,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-4.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -651,7 +651,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-5.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -661,7 +661,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-6.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -671,7 +671,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-7.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -681,7 +681,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-8.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -691,7 +691,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-9.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -701,7 +701,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-10.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -711,7 +711,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-11.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -721,7 +721,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-12.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -731,7 +731,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-13.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -741,7 +741,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-14.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -751,7 +751,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-15.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -761,7 +761,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-16.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -771,7 +771,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-17.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -781,7 +781,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-18.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -791,7 +791,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-19.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -801,7 +801,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-20.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -811,7 +811,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-21.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -821,7 +821,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-22.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <div class="swiper-slide flex-column">
@@ -831,7 +831,7 @@
                         data-zoomable
                         src="./dist/assets/images/custumars/Clint-23.jpg"
                         title=""
-                        alt="">
+                        alt="Green">
                     </picture>
                   </div>
                   <!-- / end of items loop-->
@@ -850,7 +850,7 @@
     <!-- / Main Section-->
 
     <!-- Footer -->
-    <footer class="border-top py-5 mt-4  ">
+    <footer class="HomeContaner border-top py-5 mt-4  ">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center flex-column flex-lg-row">
                 <div>
@@ -883,7 +883,7 @@
             </div>
         </div>
     </footer>    <!-- / Footer-->
-    </div>
+  
 
 
     <!-- Theme JS -->
